fix: fixes hero title not displayed issue, increase color contrast for light mode

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -68,7 +68,7 @@
         @apply max-w-full sm:max-w-lg md:max-w-2xl gap-5 sm:gap-7.5 lg:gap-10 xl:gap-7.5;
 
         & .headings {
-          @apply size-full flex flex-col items-center md:items-start gap-2 sm:gap-3 md:gap-4 lg:gap-5 overflow-hidden;
+          @apply size-full flex flex-col items-center md:items-start gap-2 sm:gap-3 md:gap-4 lg:gap-5;
         }
 
         & .buttons {
